--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "agentkv"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
 
 ###############################################################################
-description = ""Interface for agent key-value persistence.""
+description = "Interface for agent key-value persistence."
 documentation = "https://docs.rs/agentkv"
 homepage = "https://github.com/cryptopatrick/agentkv"
 repository = "https://github.com/cryptopatrick/agentkv"
 readme = "README.md"
-keywords = ["<KEYWORD1>", "<KEYWORD2>" ]
+keywords = ["AI", "Agent", "Persistence", "Key-Value"]
 license = "MIT"
 autotests = false
 
